# mpmt-readout

./: CMakeLists.txt  README.md
include/: argparse.hpp  dma-proxy.h  queue.hpp
src/: .evproducer.cpp.swp  evproducer.cpp
utils/: event-receiver.py
